<resources>
    <string name="app_name">Nightwave Plaza</string>
    <string name="ratings">Ratings</string>
    <string name="start_label">Nightwave Plaza Second Edition</string>
    <string name="my_profile">My Profile</string>
    <string name="my_likes">My Favorites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="support">Donate</string>
    <string name="timer_disabled">Sleep timer disabled.</string>
    <string name="timer_start">Music will stop after %d minute(s).</string>
    <string name="history">Play History</string>
    <string name="auth_need">Please sign in to your Nightwave Plaza account to use the like button.</string>
    <!-- Notifications -->
    <string name="notification_channel_name">Nightwave Plaza controls</string>
    <string name="notification_channel_desc">Play, pause, like.</string>
    <string name="no_internet">Sorry, we\'re unable to connect you to our services. Retrying…</string>

    <!-- default text -->
    <string name="button_icon">Button icon</string>
    <string name="button_text">Button text</string>
    <string name="background_image">Background image</string>

</resources>